--- a/MathsQuizApp/Pages/Shared/_Layout.cshtml
+++ b/MathsQuizApp/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">MathsQuizApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - MathsQuizApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - MathsQuizApp (Pages) - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
