--- a/MathsQuizApp/Views/Home/Index.cshtml
+++ b/MathsQuizApp/Views/Home/Index.cshtml
@@ -1,10 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
-@{
+﻿@{
     ViewData["Title"] = "Home page";
 }
 
@@ -14,3 +8,6 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div>Graph API result</div>
+<div>@ViewData["GraphApiResult"]</div>
